fix align?

--- a/index.css
+++ b/index.css
@@ -222,7 +222,7 @@ nav a:hover{
   height: 100vh;
 }
 
-ul.research {
+.research ul li {
   text-align: left;
 }
 /*
